# Low-Level-Memory-Cache

./: .dockerignore  .gitignore  CMakeLists.txt  Deploy_Readme.md  Dockerfile  README.md  TERMINAL_COMMANDS_RESULT.md  benchmark.py  docker-compose.yml
.github/workflows/: ci.yml  deploy-ec2.yml
benchmarks/: cache_benchmark_tuned.cpp
data/: appendonly.aof  dump.rdb
deploy/: README.md
deploy/ec2/: bootstrap.sh  deploy.sh  issue_tls_cert.sh
deploy/nginx/: default.conf  default.http.conf  default.https.conf.template
deploy/systemd/: mini-redis.service
docs/: architecture_diagram.md  benchmark_report.md
docs/graphs/: concurrency_sweep.csv  optimization_comparison.csv  tuned_benchmark_raw.csv
include/mini_redis/: command_processor.hpp  persistence.hpp  sharded_cache.hpp  tcp_command_parser.hpp
scripts/: generate_benchmark_artifacts.py  run_benchmark.ps1  validate_http_instance.ps1  validate_persistence.ps1
src/: cache_cli.cpp  cache_http.cpp  cache_tcp_server.cpp  main.cpp  persistence.cpp
tests/: cache_tests.cpp  file.txt
